# ecotrace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.MD  LICENSE  MANIFEST.in  MARKETPLACE.md  README.MD  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.5.1.md  RELEASE_v0.5.2.md  RELEASE_v0.6.0.md  RELEASE_v0.6.1.md  RELEASE_v0.7.0.md  RELEASE_v0.7.1.md  RELEASE_v1.0.0.md  SECURITY.MD  beast_stress_test.py  ecotrace_log.csv  lightweight_test_v5.py  pyproject.toml  scratch_test.py  stress_test_v5.py  test.py  test_ecotrace.py  test_v1.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: ARCHITECTURE.md  SUPPORT.md  USAGE.md
ecotrace/: __init__.py  __main__.py  cli.py  config.py  constants.json  core.py  cpu.py  exceptions.py  gpu.py  hardware.py  logger.py  ram.py  report.py  updater.py
ecotrace-vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
ecotrace-vscode/src/: SidebarProvider.ts  extension.ts
ecotrace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ecotrace/cpu_spec.csv/tests/data/archetypes/: server.csv
ecotrace/cpu_spec.csv/tests/unit/: test_wu_factors.py
ecotrace/middleware/: __init__.py  fastapi.py  flask.py
ecotrace/plugins/: __init__.py  pytest_plugin.py
scratch/: demo_budget_exceed.py  demo_v1.py
tests/: smoke_test.py  test_cli.py  test_core.py  test_hardware.py  test_hybrid_engine.py  test_middleware.py  test_v6_features.py
