[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecotrace"
version = "0.9.0"
description = "EcoTrace: High-precision carbon tracking engine for production Python. Function-level CPU/GPU emission measurement with 50ms continuous sampling, Boavizta TDP database, and audit-ready PDF reporting."
keywords = ["carbon-footprint", "energy-efficiency", "green-computing", "sustainability", "metrics", "cpu-monitoring", "gpu-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name="Emre Ozkal", email="ecotraceteam@gmail.com" }
]
dependencies = [
    "psutil",
    "py-cpuinfo",
    "fpdf",
    "matplotlib",
    "nvidia-ml-py",
    "google-generativeai",
    "requests",
    "packaging",
    "wmi; sys_platform == 'win32'"
]

[project.scripts]
ecotrace = "ecotrace.cli:main"

[project.urls]
Homepage = "https://github.com/Zwony/ecotrace"
Repository = "https://github.com/Zwony/ecotrace"

[tool.setuptools]
packages = ["ecotrace"]

[tool.setuptools.package-data]
ecotrace = ["*.json", "*.csv", "cpu_spec.csv/**/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]