[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecotrace"
version = "1.0.1"
description = "EcoTrace: High-precision carbon tracking engine for production Python. Function-level CPU/GPU emission measurement with 50ms continuous sampling, Boavizta TDP database, and audit-ready PDF reporting."
keywords = ["carbon-footprint", "energy-efficiency", "green-computing", "sustainability", "metrics", "cpu-monitoring", "gpu-monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
readme = "README.MD"
requires-python = ">=3.9"

authors = [
  { name="Emre Ozkal", email="ecotraceteam@gmail.com" }
]
dependencies = [
    "psutil",
    "py-cpuinfo",
    "fpdf",
    "matplotlib",
    "requests",
    "packaging"
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py"]
ai = ["google-generativeai"]
web = ["starlette", "flask"]
all = ["nvidia-ml-py", "google-generativeai", "starlette", "flask", "wmi; sys_platform == 'win32'"]

[project.scripts]
ecotrace = "ecotrace.cli:main"

[project.urls]
Homepage = "https://github.com/Zwony/ecotrace"
Repository = "https://github.com/Zwony/ecotrace"

[tool.setuptools]
packages = ["ecotrace", "ecotrace.middleware", "ecotrace.plugins"]

[tool.setuptools.package-data]
ecotrace = ["*.json", "*.csv", "cpu_spec.csv/**/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]